# chess-engine

./: README.md  cabal.project  chess-engine.cabal  flake.nix  hie.yaml
